syntax = "proto3";

option csharp_namespace = "PostService.Grpc";

import "google/protobuf/timestamp.proto";

package posts;

service GrpcPost {
  rpc GetAll (Empty) returns (PostList);
  rpc Get (PostId) returns (Post);
  rpc Add (Post) returns (Empty);
  rpc Update (Post) returns (Empty);
  rpc Remove (PostId) returns (Empty);
}

message Empty {}

message Post {
	string id = 1;
	string dateTime = 2;
	string text = 3;
	uint64 commentCount = 4;
	uint64 likeCount = 5;
	string userProfileId = 6;
}

message PostId {
  string Id = 1;
}

message PostList {
	repeated Post posts = 1;
}
